# decorrelated-learning

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  base.py  cotrain.py  cotrain_2.py  cotrain_3.py  cotrain_4.py  cotrain_5.py  lite.py  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
configs/: paper_defaults.yaml
scripts/: run_ensemble.py
src/diversity_tsc/: __init__.py  cli.py
src/diversity_tsc/data/: __init__.py  ucr.py
src/diversity_tsc/models/: __init__.py  lite.py
src/diversity_tsc/training/: __init__.py  losses.py  trainer.py
src/diversity_tsc/utils/: __init__.py
tests/: test_data.py  test_losses.py  test_models.py  test_trainer.py
